RESOLVED FIXED160746
Optimization in Node.insertBefore() is not spec-compliant
https://bugs.webkit.org/show_bug.cgi?id=160746
Summary Optimization in Node.insertBefore() is not spec-compliant
Chris Dumez
Reported 2016-08-10 13:39:02 PDT
We have an optimization in Node.insertBefore(newNode, refChild) to avoid doing any work when newNode == refChild or newNode.nextSibling == refChild. This optimization is not in the specification: - https://dom.spec.whatwg.org/#concept-node-replace The issue is that this optimization is observable with DOM mutation observers / listeners or DOM ranges.
Attachments
Patch (14.78 KB, patch)
2016-08-10 15:06 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-10 15:06:40 PDT
WebKit Commit Bot
Comment 2 2016-08-10 19:23:11 PDT
Comment on attachment 285768 [details] Patch Clearing flags on attachment: 285768 Committed r204368: <http://trac.webkit.org/changeset/204368>
WebKit Commit Bot
Comment 3 2016-08-10 19:23:20 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 4 2017-01-20 20:38:46 PST
Note You need to log in before you can comment on or make changes to this bug.